[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto_fuga_clientes"
version = "0.0.1"
description = "Proyeco final del curso Machine Learning 1"
authors = [
  { name = "David Rodriguez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["proyecto_fuga_clientes"]
force_sort_within_sections = true


